# Samsung-Hackathon-FCRAG-

./: .gitignore  FCRAG_PRD.md  FCRAG_System_Design.md  README.md  app.py  implementation_plan.md  project_update  pyproject.toml  requirements.txt
config/: settings.yaml  telecom_acronyms.yaml
data/custom_scenarios/: fault_clause_mapping.json
data/processed/: oai_kpi_baseline.csv
data/simu5g/: beam_failure_scenarios.csv  capacity_overflow_scenarios.csv  congestion_scenarios.csv  eval_fault_scenarios.json  fault_narratives.jsonl  fault_narratives_normalized.jsonl  fault_scenarios.jsonl  fse_training_pairs.json  ho_failure_scenarios.csv  interference_scenarios.csv  link_failure_scenarios.csv  pdcp_delay_scenarios.csv  rrc_failure_scenarios.csv  timing_drift_scenarios.csv  ue_detach_scenarios.csv
demo/: app.py  run_demo.py
docs/: README.md  architecture.md  ax.md  benchmark.md  datasets.md  folder_structure.md  installation.md  models.md  screenshots.md  technical_stack.md  user_guide.md
fcrag/: __init__.py
fcrag/api/: __init__.py  main.py  schemas.py
fcrag/encode/: __init__.py  fse.py  fse_trainer.py  taae.py
fcrag/eval/: custom_eval.py  faithfulness_eval.py  latency_bench.py  report.py  teleqna_eval.py
fcrag/explain/: __init__.py  causal_graph.py  formatter.py  (+1 more)
results/: evaluation_report.md
scripts/: download_data.py  full_test_rag.py  ingest_all.py  normalize_data.py  retrain_fse.py  run_evaluation.py  scaffold_project.py  test_rag.py
src/: app.py
tests/: test_agents.py  test_api.py  test_embedder.py  test_indexer.py  test_retrieval.py
(+262 files in other folders)
