[project]
name = "samsung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",
    "datasets>=3.0.0",
    "fastapi>=0.115.0",
    "fitz>=0.0.1.dev2",
    "httpx>=0.27.0",
    "huggingface-hub>=0.25.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.2.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.0",
    "networkx>=3.6.1",
    "numpy>=1.26.0",
    "onnxruntime>=1.19.0",
    "openpyxl>=3.1.5",
    "optimum>=1.22.0",
    "pandas>=2.2.0",
    "pillow>=10.4.0",
    "plotly>=5.24.0",
    "pydantic>=2.9.0",
    "pymupdf>=1.24.0",
    "pytest>=8.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.11.0",
    "rank-bm25>=0.2.2",
    "rich>=13.9.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.38.0",
    "streamlit-agraph>=0.0.45",
    "tokenizers>=0.20.0",
    "torch>=2.12.0",
    "tqdm>=4.66.0",
    "transformers>=4.45.0",
    "uvicorn[standard]>=0.31.0",
]
